# lattice

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: index.md
docs/api/: instruments.md  risk.md  store.md  trading.md
docs/guides/: getting-started.md  persistence.md
docs/superpowers/plans/: 2026-05-30-positions-instruments-link.md
docs/superpowers/specs/: 2026-05-30-positions-instruments-link-design.md
examples/: bond_risk_analysis.py  greeks_deep_dive.py  multi_instrument_risk.py  option_pricer_web.py  quick_start.py  sensitivity_analysis.py  swap_risk_analysis.py  trading_dashboard.py  trading_demo.py
lattice/: __init__.py
lattice/instruments/: __init__.py  base.py  derivatives.py  equity.py  fixedincome.py  fx.py  options.py
lattice/market/: __init__.py  quotes.py
lattice/models/: __init__.py  blackscholes.py
lattice/risk/: __init__.py  engine.py  portfolio.py  scenarios.py  sensitivities.py  shocks.py  var.py
lattice/store/: __init__.py  core.py  exceptions.py  serialization.py
lattice/store/backends/: __init__.py  base.py  memory.py  sqlite.py
lattice/trading/: __init__.py  blotter.py  book.py  dashboard.py  position.py  positions.py  system.py  table_ui.py  trade.py
lattice/ui/: __init__.py  app.py  bindings.py  protocol.py  server.py  session.py
lattice/workflows/: __init__.py  activities.py  client.py  worker.py  workflows.py
tests/: test_blackscholes.py  test_books.py  test_instruments.py  test_options.py  test_risk.py  test_store.py  test_trading.py  test_ui.py  test_workflows.py
